add vue template in personal page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
-    <title>Kool Store - Responsive eCommerce Template</title>
+    <title>BagBuy</title>
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
@@ -64,7 +64,7 @@
                             </a>
                             <ul class="menu">
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="#">Personal</a></li>
+                                <li><a href="Personal.html">Personal</a></li>
                                 <li><a href="#">Contact us</a></li>
                             </ul>
                         </div> <!-- /.main-menu -->
