adding display condition

--- a/Personal.html
+++ b/Personal.html
@@ -64,7 +64,7 @@
                             </a>
                             <ul class="menu">
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="#">Personal</a></li>
+                                <li><a href="Personal.html">Personal</a></li>
                                 <li><a href="#">Contact us</a></li>
                             </ul>
                         </div> <!-- /.main-menu -->
@@ -83,7 +83,7 @@
     			<li class="nav-item side-nav" onclick="loadPage('MyItems')">
     				<h4>My Items</h4>
     			</li>
-    			<li class="nav-item side-nav">
+    			<li class="nav-item side-nav" onclick="loadPage('InteresedList')">
     				<h4>Interested List</h4>
     			</li>
     		</ul>    			
