--- a/Personal.html
+++ b/Personal.html
@@ -77,7 +77,7 @@
     <div class="row" style="height: 400px;">
     	<div class="col-md-4" id="side-nav">
     		<ul class="navbar-nav navbar-sidenav">
-    			<li class="nav-item side-nav">
+    			<li class="nav-item side-nav" onclick="loadPage('profile')">
     				<h4>Profile</h4>
     			</li>
     			<li class="nav-item side-nav" onclick="loadPage('MyItems')">
