--- a/Personal.html
+++ b/Personal.html
@@ -74,7 +74,7 @@
         </div> <!-- /.main-header -->
     </header> <!-- /.site-header -->
 
-    <div class="row" style="height: 400px;">
+    <div class="row" style="height: 400px;" onload="loadPage('profile')">
     	<div class="col-md-4" id="side-nav">
     		<ul class="navbar-nav navbar-sidenav">
     			<li class="nav-item side-nav" onclick="loadPage('profile')">
@@ -83,7 +83,7 @@
     			<li class="nav-item side-nav" onclick="loadPage('MyItems')">
     				<h4>My Items</h4>
     			</li>
-    			<li class="nav-item side-nav" onclick="loadPage('InteresedList')">
+    			<li class="nav-item side-nav" onclick="loadPage('InterestedList')">
     				<h4>Interested List</h4>
     			</li>
     		</ul>    			
